@@ -440,6 +440,57 @@ literal|"]"
 argument_list|)
 expr_stmt|;
 block|}
+comment|/** 	 * Serialization support. 	 */
+specifier|private
+name|void
+name|writeObject
+parameter_list|(
+name|ObjectOutputStream
+name|out
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|writeSerialized
+argument_list|(
+name|out
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** 	 * Serialization support. 	 */
+specifier|private
+name|void
+name|readObject
+parameter_list|(
+name|ObjectInputStream
+name|in
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|ClassNotFoundException
+block|{
+name|readSerialized
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|values
+operator|==
+literal|null
+condition|)
+block|{
+name|values
+operator|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 annotation|@
 name|Override
 specifier|protected
