@@ -678,6 +678,238 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testSerializeModifiedMapBasedObject
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ObjectId
+name|objectId
+init|=
+operator|new
+name|ObjectId
+argument_list|(
+literal|"test"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|42
+argument_list|)
+decl_stmt|;
+name|CayenneDataObject
+name|dataObject
+init|=
+operator|new
+name|CayenneDataObject
+argument_list|()
+decl_stmt|;
+name|dataObject
+operator|.
+name|setObjectContext
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+name|dataObject
+operator|.
+name|setObjectId
+argument_list|(
+name|objectId
+argument_list|)
+expr_stmt|;
+name|dataObject
+operator|.
+name|writePropertyDirectly
+argument_list|(
+literal|"test"
+argument_list|,
+literal|123
+argument_list|)
+expr_stmt|;
+name|dataObject
+operator|.
+name|setPersistenceState
+argument_list|(
+name|PersistenceState
+operator|.
+name|MODIFIED
+argument_list|)
+expr_stmt|;
+name|CayenneDataObject
+name|cloned
+init|=
+name|Util
+operator|.
+name|cloneViaSerialization
+argument_list|(
+name|dataObject
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|PersistenceState
+operator|.
+name|MODIFIED
+argument_list|,
+name|cloned
+operator|.
+name|getPersistenceState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|123
+argument_list|,
+name|cloned
+operator|.
+name|readProperty
+argument_list|(
+literal|"test"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|cloned
+operator|.
+name|getObjectContext
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|dataObject
+operator|.
+name|getObjectId
+argument_list|()
+argument_list|,
+name|cloned
+operator|.
+name|getObjectId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testSerializeCommittedMapBasedObject
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ObjectId
+name|objectId
+init|=
+operator|new
+name|ObjectId
+argument_list|(
+literal|"test"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|42
+argument_list|)
+decl_stmt|;
+name|CayenneDataObject
+name|dataObject
+init|=
+operator|new
+name|CayenneDataObject
+argument_list|()
+decl_stmt|;
+name|dataObject
+operator|.
+name|setObjectContext
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+name|dataObject
+operator|.
+name|setObjectId
+argument_list|(
+name|objectId
+argument_list|)
+expr_stmt|;
+name|dataObject
+operator|.
+name|writePropertyDirectly
+argument_list|(
+literal|"test"
+argument_list|,
+literal|123
+argument_list|)
+expr_stmt|;
+name|dataObject
+operator|.
+name|setPersistenceState
+argument_list|(
+name|PersistenceState
+operator|.
+name|COMMITTED
+argument_list|)
+expr_stmt|;
+name|CayenneDataObject
+name|cloned
+init|=
+name|Util
+operator|.
+name|cloneViaSerialization
+argument_list|(
+name|dataObject
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|PersistenceState
+operator|.
+name|HOLLOW
+argument_list|,
+name|cloned
+operator|.
+name|getPersistenceState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|cloned
+operator|.
+name|readProperty
+argument_list|(
+literal|"test"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|cloned
+operator|.
+name|getObjectContext
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|dataObject
+operator|.
+name|getObjectId
+argument_list|()
+argument_list|,
+name|cloned
+operator|.
+name|getObjectId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
