@@ -29,6 +29,7 @@ Bug Fixes:
 
 CAY-2332 Property API: unable to use eq() and in() methods for toMany relationships
 CAY-2509 Result of resolving lazily faulted relationships can be out-of-date
+CAY-2547 CayenneDataObject serialization issue
 
 ----------------------------------
 Release: 4.1.M3
